test/library/standard/Memory/Initialization/MoveInitializeCopyError.good
MoveInitializeCopyError.chpl:4: In function 'test1':
MoveInitializeCopyError.chpl:8: error: actual is copied when passed to 'rhs' of 'moveInitialize'
